# CodeMarket

./: .gitignore  Cargo.toml  Config.toml  README.md
bots/apis/: codemarket.js  codemarket.py
bots/javascript/: randobot.js
bots/python/: randobot.py
src/: authorization.rs  base.rs  ledger.rs  main.rs  purchase.rs  shop.rs  tera_functions.rs  tests.rs  util.rs
templates/: base.html.tera  base.js  codemarket.css  index.html.tera  index.js  market.html.tera  purchase.html.tera  purchase.js  purchase_response.html.tera  stock.html.tera  stock_response.html.tera  stylesheet.css  vendor.html.tera
templates/error/: 400.html.tera  404.html.tera  500.html.tera
