[package]
name = "rust_market"
version = "0.1.0"
authors = ["royJackman <jackman.roy@gmail.com>"]
edition = "2018"

[dependencies]
config = "0.10.1"
lazy_static = "1.4.0"
nanoid = "0.1.3"
rand = "0.7"
rocket = "0.4.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["tera_templates", "serve"]